# WindowsSpeech4J

./: .gitignore
cpp/: CMakeLists.txt
cpp/src/: Constants.h  DriverException.cpp  DriverException.h  DriverUtility.cpp  DriverUtility.h  Exception.cpp  Exception.h  ExceptionUtility.cpp  ExceptionUtility.h  Handle.cpp  Handle.h  HandleUtility.cpp  HandleUtility.h  Logger.cpp  Logger.h  LoggerUtility.cpp  LoggerUtility.h  SpeechDriver.cpp  SpeechDriver.h  SpeechDriverAdapter.cpp  StringUtility.cpp  StringUtility.h  Type.cpp  Type.h  TypeUtility.cpp  TypeUtility.h  Voice.cpp  Voice.h  orthae_com_github_windowsspeech4j_SpeechDriverAdapter.h
java/: pom.xml
java/src/main/java/orthae/com/github/: App.java
java/src/main/java/orthae/com/github/windowsspeech4j/: LibraryLoader.java  SpeechClient.java  SpeechDriverAdapter.java  Voice.java  WindowsSpeech4J.java
java/src/main/java/orthae/com/github/windowsspeech4j/exception/: InvalidArgumentException.java  OutOfMemoryException.java  SpeechDriverException.java  UnexpectedException.java
java/src/test/java/orthae/com/github/windowsspeech4j/: LibraryLoaderTest.java  SpeechClientTest.java  VoiceTest.java
java/src/test/java/orthae/com/github/windowsspeech4j/exception/: SpeechDriverExceptionTest.java
